...
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:text="Name : "
            />

        <Button
            android:id="@+id/logout"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="100dp"
            android:text="Logout" />

    </LinearLayout>


</LinearLayout>

